// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LetterRenderForm snapshots matches snapshot for long tab 1`] = `
<DocumentFragment>
  <form
    action="javascript:throw new Error('A React form was unexpectedly submitted. If you called form.submit() manually, consider using form.requestSubmit() instead. If you\\'re trying to use event.stopPropagation() in a submit event handler, consider also calling event.preventDefault().')"
  >
    <input
      name="form-id"
      readonly=""
      type="hidden"
      value="letter-preview-long"
    />
    <input
      name="csrf_token"
      readonly=""
      type="hidden"
      value="no_token"
    />
    <h3
      class="nhsuk-heading-s"
    >
      PDS personalisation fields
    </h3>
    <p
      class="nhsuk-body-s"
    >
      The PDS fields will be pre-filled with example data when you choose a test recipient.
    </p>
    <div
      class="nhsuk-form-group"
    >
      <label
        class="nhsuk-label nhsuk-label--s"
        for="system-personalisation-pack-id-long"
      >
        Example recipient
      </label>
      <select
        class="nhsuk-select recipientSelect"
        id="system-personalisation-pack-id-long"
        name="systemPersonalisationPackId"
      >
        <option
          value=""
        >
          Select a recipient
        </option>
        <option
          value="long-1"
        >
          Mr Michael James Richardson-Clarke
        </option>
        <option
          value="long-2"
        >
          Dr Elizabeth Anne Thompson
        </option>
        <option
          value="long-3"
        >
          Dame Catherine Elizabeth Montgomery
        </option>
        <option
          value="long-4"
        >
          Mr Rajesh Kumar Chandrasekaran
        </option>
        <option
          value="long-5"
        >
          Ms Aminatou Diallo Kouyaté
        </option>
        <option
          value="long-6"
        >
          Sir William Alexander Fitzgerald
        </option>
        <option
          value="long-7"
        >
          Dr Priya Sharma-Williamson
        </option>
        <option
          value="long-8"
        >
          Rev Emmanuel Kwabena Adomako
        </option>
        <option
          value="long-9"
        >
          Prof Franziska Vogel-Bernhardt
        </option>
        <option
          value="long-10"
        >
          Mrs Margaret Anne O'Sullivan
        </option>
        <option
          value="long-11"
        >
          Dr Christopher James Harrington
        </option>
      </select>
    </div>
    <h3
      class="nhsuk-heading-s nhsuk-u-padding-top-4"
    >
      Custom personalisation fields
    </h3>
    <div
      class="nhsuk-form-group"
    >
      <label
        class="nhsuk-label nhsuk-label--s"
        for="custom-appointmentDate-long"
      >
        appointmentDate
      </label>
      <input
        class="nhsuk-input"
        id="custom-appointmentDate-long"
        maxlength="500"
        name="custom_appointmentDate"
        type="text"
      />
    </div>
    <button
      aria-disabled="false"
      class="nhsuk-button nhsuk-button--secondary nhsuk-u-margin-top-4"
      type="submit"
    >
      Update preview
    </button>
  </form>
</DocumentFragment>
`;

exports[`LetterRenderForm snapshots matches snapshot for short tab 1`] = `
<DocumentFragment>
  <form
    action="javascript:throw new Error('A React form was unexpectedly submitted. If you called form.submit() manually, consider using form.requestSubmit() instead. If you\\'re trying to use event.stopPropagation() in a submit event handler, consider also calling event.preventDefault().')"
  >
    <input
      name="form-id"
      readonly=""
      type="hidden"
      value="letter-preview-short"
    />
    <input
      name="csrf_token"
      readonly=""
      type="hidden"
      value="no_token"
    />
    <h3
      class="nhsuk-heading-s"
    >
      PDS personalisation fields
    </h3>
    <p
      class="nhsuk-body-s"
    >
      The PDS fields will be pre-filled with example data when you choose a test recipient.
    </p>
    <div
      class="nhsuk-form-group"
    >
      <label
        class="nhsuk-label nhsuk-label--s"
        for="system-personalisation-pack-id-short"
      >
        Example recipient
      </label>
      <select
        class="nhsuk-select recipientSelect"
        id="system-personalisation-pack-id-short"
        name="systemPersonalisationPackId"
      >
        <option
          value=""
        >
          Select a recipient
        </option>
        <option
          value="short-1"
        >
          Jo Bloggs
        </option>
        <option
          value="short-2"
        >
          Mr John Smith
        </option>
        <option
          value="short-3"
        >
          Ms Sarah Jones
        </option>
        <option
          value="short-4"
        >
          Dr Li Wei
        </option>
        <option
          value="short-5"
        >
          Mrs Mary Brown
        </option>
        <option
          value="short-6"
        >
          Rev Mia Dao
        </option>
        <option
          value="short-7"
        >
          Miss Lucy Taylor
        </option>
        <option
          value="short-8"
        >
          Mx Alex Chen
        </option>
        <option
          value="short-9"
        >
          Prof Ola Fye
        </option>
        <option
          value="short-10"
        >
          Dr James Patel
        </option>
        <option
          value="short-11"
        >
          Ms Claire Davies
        </option>
      </select>
    </div>
    <h3
      class="nhsuk-heading-s nhsuk-u-padding-top-4"
    >
      Custom personalisation fields
    </h3>
    <div
      class="nhsuk-form-group"
    >
      <label
        class="nhsuk-label nhsuk-label--s"
        for="custom-appointmentDate-short"
      >
        appointmentDate
      </label>
      <input
        class="nhsuk-input"
        id="custom-appointmentDate-short"
        maxlength="500"
        name="custom_appointmentDate"
        type="text"
      />
    </div>
    <div
      class="nhsuk-form-group"
    >
      <label
        class="nhsuk-label nhsuk-label--s"
        for="custom-clinicName-short"
      >
        clinicName
      </label>
      <input
        class="nhsuk-input"
        id="custom-clinicName-short"
        maxlength="500"
        name="custom_clinicName"
        type="text"
      />
    </div>
    <button
      aria-disabled="false"
      class="nhsuk-button nhsuk-button--secondary nhsuk-u-margin-top-4"
      type="submit"
    >
      Update preview
    </button>
  </form>
</DocumentFragment>
`;

exports[`LetterRenderForm snapshots matches snapshot without custom personalisation 1`] = `
<DocumentFragment>
  <form
    action="javascript:throw new Error('A React form was unexpectedly submitted. If you called form.submit() manually, consider using form.requestSubmit() instead. If you\\'re trying to use event.stopPropagation() in a submit event handler, consider also calling event.preventDefault().')"
  >
    <input
      name="form-id"
      readonly=""
      type="hidden"
      value="letter-preview-short"
    />
    <input
      name="csrf_token"
      readonly=""
      type="hidden"
      value="no_token"
    />
    <h3
      class="nhsuk-heading-s"
    >
      PDS personalisation fields
    </h3>
    <p
      class="nhsuk-body-s"
    >
      The PDS fields will be pre-filled with example data when you choose a test recipient.
    </p>
    <div
      class="nhsuk-form-group"
    >
      <label
        class="nhsuk-label nhsuk-label--s"
        for="system-personalisation-pack-id-short"
      >
        Example recipient
      </label>
      <select
        class="nhsuk-select recipientSelect"
        id="system-personalisation-pack-id-short"
        name="systemPersonalisationPackId"
      >
        <option
          value=""
        >
          Select a recipient
        </option>
        <option
          value="short-1"
        >
          Jo Bloggs
        </option>
        <option
          value="short-2"
        >
          Mr John Smith
        </option>
        <option
          value="short-3"
        >
          Ms Sarah Jones
        </option>
        <option
          value="short-4"
        >
          Dr Li Wei
        </option>
        <option
          value="short-5"
        >
          Mrs Mary Brown
        </option>
        <option
          value="short-6"
        >
          Rev Mia Dao
        </option>
        <option
          value="short-7"
        >
          Miss Lucy Taylor
        </option>
        <option
          value="short-8"
        >
          Mx Alex Chen
        </option>
        <option
          value="short-9"
        >
          Prof Ola Fye
        </option>
        <option
          value="short-10"
        >
          Dr James Patel
        </option>
        <option
          value="short-11"
        >
          Ms Claire Davies
        </option>
      </select>
    </div>
    <button
      aria-disabled="false"
      class="nhsuk-button nhsuk-button--secondary nhsuk-u-margin-top-4"
      type="submit"
    >
      Update preview
    </button>
  </form>
</DocumentFragment>
`;
